# sminer

./: .dockerignore  .gitignore  Cargo.toml  build.rs  config-best.yaml  config.yaml  docker-compose.yaml  dockerfile
doc/: messages.md  rate_calc.xlsx  td.md  trend.md
protobuf/: core.proto  yahoo-finance.proto
resource/grafana/: daily-analysis.json  daily-trade.json  daily-trend.json  dashboard.json  pair-trade.json  yahoo-finance.json
resource/script/: group_ticker.sh  replay-all.sh  replay-best.sh
src/: lib.rs  main.rs
src/analysis/: computor.rs  debug.rs  mod.rs  trade.rs
src/decoder/: mod.rs
src/persist/: es.rs  grafana.rs  mod.rs  mongo.rs
src/proto/: mod.rs
src/provider/: decoder.rs  mod.rs  yahoo.rs
src/vo/: biz.rs  core.rs  mod.rs
tests/: tests.rs
tests/analysis/: mod.rs
tests/decoder/: mod.rs
tests/persist/: mod.rs
tests/provider/: mod.rs
tests/vo/: mod.rs
