[package]
name = "sminer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.14"
log4rs = "1.0.0"
mongodb = "2.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
websocket = "0.26.3"

[build-dependencies]
prost-build = { version = "0.9.0" }
